--- a/Notes.APP/Notes.APP/ListWindow.xaml
+++ b/Notes.APP/Notes.APP/ListWindow.xaml
@@ -70,7 +70,7 @@
                     Grid.Row="0"
                     Height="40"
                     VerticalAlignment="Top"
-                    Background="#80000000"
+                    Background="{Binding BackGroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     BorderBrush="#bfc1be"
                     BorderThickness="0,0,0,1"
                     MouseLeftButtonDown="OnMouseLeftButtonDown"
@@ -103,14 +103,14 @@
                             Content="&#xE948;"
                             FontFamily="Segoe MDL2 Assets"
                             FontSize="16"
-                            Foreground="White" />
+                            Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         <TextBlock
                             Grid.Column="1"
                             VerticalAlignment="Center"
                             FontFamily="FangSong"
                             FontSize="16"
                             FontWeight="Bold"
-                            Foreground="White"
+                            Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             Text="计签" />
                         <!--  右侧按钮  -->
                         <StackPanel
@@ -128,7 +128,7 @@
                                     Content="&#xE718;"
                                     FontFamily="Segoe MDL2 Assets"
                                     FontSize="16"
-                                    Foreground="White" />
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <Button
                                     VerticalAlignment="Center"
                                     Background="Transparent"
@@ -137,7 +137,7 @@
                                     Content="&#xE72C;"
                                     FontFamily="Segoe MDL2 Assets"
                                     FontSize="16"
-                                    Foreground="White" />
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  设置按钮  -->
                                 <Button
                                     VerticalAlignment="Center"
@@ -147,7 +147,7 @@
                                     Content="&#xE713;"
                                     FontFamily="Segoe MDL2 Assets"
                                     FontSize="16"
-                                    Foreground="White" />
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  最小化按钮  -->
                                 <Button
                                     VerticalAlignment="Center"
@@ -156,7 +156,7 @@
                                     Click="MinimizeButton_Click"
                                     Content="&#xE921;"
                                     FontFamily="Segoe MDL2 Assets"
-                                    Foreground="White" />
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  关闭按钮  -->
                                 <Button
                                     Background="Transparent"
@@ -164,7 +164,7 @@
                                     Click="CloseButton_Click"
                                     Content="&#xE8BB;"
                                     FontFamily="Segoe MDL2 Assets"
-                                    Foreground="White" />
+                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                             </UniformGrid>
 
                         </StackPanel>
@@ -195,13 +195,13 @@
                     </Grid>
 
                 </Border>
-                <TextBlock
+                <!--<TextBlock
                     Grid.Row="1"
                     Margin="10,3"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    Text="{Binding UpdateTime, StringFormat='{}{0:MM/dd HH:mm}', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="{Binding UpdateTime, StringFormat='{}{0:MM/dd HH:mm}', Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
                 <!--  透明遮罩区域，用于关闭抽屉  -->
                 <Grid
                     x:Name="CloseArea"
@@ -215,12 +215,11 @@
                 <Border
                     x:Name="DrawerPanel"
                     Grid.Row="1"
-                    Width="200"
+                    Width="150"
                     Height="250"
-                    Margin="0,10,0,0"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Background="#66000000"
+                    Background="{Binding BackGroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     BorderBrush="Gray"
                     BorderThickness="1,1,0,1"
                     Visibility="Collapsed">
@@ -259,7 +258,7 @@
                             <TextBlock
                                 VerticalAlignment="Center"
                                 FontSize="14"
-                                Foreground="White"
+                                Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 MouseLeftButtonDown="TextBlock_MouseLeftButtonDown"
                                 Text="开机启动" />
                         </StackPanel>
